fix: adjust padding and gap in system tray for better layout

--- a/src/Components/Taskbar/Taskbar.module.scss
+++ b/src/Components/Taskbar/Taskbar.module.scss
@@ -52,7 +52,8 @@
   background: #c0c0c0;
   height: 40px;
   margin-right: 2px;
-
+  gap: 10px;
+  padding-left: 5px;
   border-top: 2px inset #808080c2;
   border-left: 2px inset #808080c2;
   border-bottom: 2px inset #FFFFFF;
